--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Marketika</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,15 @@
   <!-- Header -->
   <section class="section-outer section-header">
     <div class="section-inner">
-      section-header
+      <div class="section-header-logo"></div>
+      <div class="section-header-content">
+        <div class="section-header-wrapper">
+          <div class="section-header-wrapper__title">We are here help you out</div>
+          <div class="section-header-wrapper__subtitle">Very professional and highly customizable sketch template with lots 
+            of custom pages and useful features</div>
+          <div class="section-header-wrapper__form"></div>
+        </div>
+      </div>
     </div>
   </section>
    <!-- / Header -->
@@ -22,7 +30,7 @@
    <!-- promo -->
   <section class="section-outer section-header">
     <div class="section-inner">
-      section-header
+      section-promo
     </div>
   </section>
    <!-- / promo -->
@@ -30,7 +38,7 @@
    <!-- founder -->
   <section class="section-outer section-header">
     <div class="section-inner">
-      section-header
+      section-founder
     </div>
   </section>
    <!-- / founder -->
@@ -38,7 +46,7 @@
    <!-- plans -->
   <section class="section-outer section-header">
     <div class="section-inner">
-      section-header
+      section-plans
     </div>
   </section>
    <!-- / plans -->
@@ -46,7 +54,7 @@
    <!-- free -->
   <section class="section-outer section-header">
     <div class="section-inner">
-      section-header
+      section-free
     </div>
   </section>
    <!-- / free -->
@@ -54,7 +62,7 @@
    <!-- footer -->
   <section class="section-outer section-header">
     <div class="section-inner">
-      section-header
+      section-footer
     </div>
   </section>
    <!-- / footer -->
